# fastapi-base

./: .gitignore  README.md  alembic.ini  dev.db  pyproject.toml
app/: main.py
app/api/v1/: accounts.py  auth.py  routes.py  users.py
app/core/: aws_ses_service.py  config.py  db.py  security.py
app/models/: accounts.py  associations.py  security.py  users.py
app/schemas/: accounts.py  security.py  token.py  users.py
app/utils/: accounts.py  auth.py  users.py
migrations/: env.py
migrations/versions/: a5136477f0db_add_cascade_delete_for_user_id_in_.py  e31fbbd98a45_add_passwordresettoken_table.py
